fixed overflow overriding overflow on all other pages too

--- a/frontend/src/components/LearnAndPractice/styles/LearnAndPracticeLandingPage.css
+++ b/frontend/src/components/LearnAndPractice/styles/LearnAndPracticeLandingPage.css
@@ -1,9 +1,3 @@
-/* This sets the body and html to full height and disables the overall scrollbar */
-body, html {
-  height: 100%;
-  margin: 0;
-  overflow: hidden;
-}
 
 .learn-and-practice-landing-page-container {
   display: flex;
